...
        vm.fetchInvitations(context)
    }
    Scaffold(
        content = { paddingValues ->
            Box(modifier = Modifier
                .fillMaxSize()
                .padding(paddingValues).background(MaterialTheme.colorScheme.background).testTag("homeScreen")) {
                Column{
                    CurrentVacation(navController)
                    Invitations(navController)
                    MyVacationList(navController)
                }
            }
...
